# backend-core

./: .swp  CMakeLists.txt  run.sh
core/: TradingEngine.cpp  TradingEngine.h
include/Authenticator/: .AuthController.cpp.swp  AuthController.cpp  AuthController.h
include/Backtest/: .BacktestController.cpp.swp  BacktestController.cpp  BacktestController.h
include/Binance/: MarketFetcher.cpp  MarketFetcher.h
include/History/: HistoryController.cpp  HistoryController.h
include/Router/: Router.cpp  Router.h
src/: main.cpp
